trunk/Archive2/9d/df85286f771902/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In instantiation of 'struct myobject<int>::CheckVaradicArgs<char*>':
main.cpp:50:69:   required from 'myobject<T>::myobject(Ts ...) [with Ts = {char*}; T = int]'
main.cpp:61:31:   required from here
main.cpp:30:39: error: no type named 'type' in 'struct std::enable_if<false, myobject<int>::placeholder>'
                 , placeholder >::type type;
                                       ^
